# simple-image-encryption-algorithm

./: .gitignore  CMakeLists.txt  README.md  key.txt  out.txt
include/: dynamic_matrix.hpp  image_cipher.hpp  logistic_chaotic_map.hpp
src/: image_cipher.cpp  logistic_chaotic_map.cpp  main.cpp  test.jl
test/: image-cipher  ka.txt  kb.txt
